Added iterated greedy
Also, changed order_dict_return_list_reversed(dictionary) to order_dict_return_list(dictionary, reverse=False).

General Code Tidying

--- a/graphs.config
+++ b/graphs.config
@@ -6,3 +6,7 @@ showLabels True
 useErdosRenyi True
 runBruteForce True
 timesToRun 1
+IGInitial degreeGreedy
+IGLimit 100 
+IGGoalK 1
+IGRatios 50,30,50,0,0,0
